fixtures/cs-hash-02/bad/require-bcryptjs-hash.js
const bcrypt = require("bcryptjs");

function hashPassword(password) {
	return bcrypt.hashSync(password, 7);
}

module.exports = { hashPassword };
